# PythonDataStructures

./: .gitignore  README.md  index.md  linkedlist.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
Actual/: interface.ipynb  linked_list.py
docs/: index.md
docs/about/: contributing.md  history.md  license.md
docs/api/: index.md  linkedlist.md  nodes.md
docs/data-structures/: index.md  linked-lists.md  nodes.md
docs/getting-started/: installation.md  quickstart.md
src/pythondatastructures/: __init__.py  linkedlist.py  nodes.py
src/pythondatastructures/old/: __init__.py
src/pythondatastructures/old/Actual/: __init__.py  linked_list.py
tests/: __init__.py  conftest.py  test_nodes.py  test_old_linkedlist.py
