[project]
name = "pythondatastructures"
version = "0.1.0"
description = "Python data structures implementations"
readme = "README.md"
authors = [
    { name = "FuzzLightyear", email = "noreply@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "pytest>=9.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
